force-app/main/default/objects/OCE__MedicalInquiryRequest__c/OCE__MedicalInquiryRequest__c.object-meta.xml
<CustomObject>
    <description>Medical Inquiry Request records.</description>
    <label>Medical Inquiry Request</label>
    <nameField>
        <displayFormat>MIRF-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Inquiries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>