force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__Account__c.field-meta.xml
<CustomField>
    <fullName>OCE__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Account that is requesting the Medical Inquiry.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Medical Inquiry Requests</relationshipLabel>
    <relationshipName>MedicalInquiryRequests</relationshipName>
    <type>Lookup</type>
</CustomField>