force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__AdditionalEmail__c.field-meta.xml
<CustomField>
    <fullName>OCE__AdditionalEmail__c</fullName>
    <description>Additional email on MIRF record.</description>
    <label>Additional Email</label>
    <type>Email</type>
</CustomField>