force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__AdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>OCE__AdditionalInformation__c</fullName>
    <description>Populate if Product is required, but not filled in.</description>
    <label>Other Products</label>
    <length>255</length>
    <type>Text</type>
</CustomField>