force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__AdditionalNotes__c.field-meta.xml
<CustomField>
    <fullName>OCE__AdditionalNotes__c</fullName>
    <description>Additional notes for MIRF record.</description>
    <label>Additional Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>