force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__Address__c.field-meta.xml
<CustomField>
    <fullName>OCE__Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Address that the Account will receive the information.</description>
    <label>Address</label>
    <referenceTo>OCE__AccountAddress__c</referenceTo>
    <relationshipName>MedicalInquiryRequests</relationshipName>
    <type>Lookup</type>
</CustomField>