force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__AddressLine1__c.field-meta.xml
<CustomField>
    <fullName>OCE__AddressLine1__c</fullName>
    <description>First line of the Address.</description>
    <label>Address Line 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>