force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>OCE__AddressLine2__c</fullName>
    <description>Second line of the Address.</description>
    <label>Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>