force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__AddressLine3__c.field-meta.xml
<CustomField>
    <fullName>OCE__AddressLine3__c</fullName>
    <description>Third line of the Address.</description>
    <label>Address Line 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>