force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__Call__c.field-meta.xml
<CustomField>
    <fullName>OCE__Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Call</description>
    <inlineHelpText>Parent Call</inlineHelpText>
    <label>Call</label>
    <referenceTo>OCE__Call__c</referenceTo>
    <relationshipLabel>MIRFs</relationshipLabel>
    <relationshipName>CallMirfs</relationshipName>
    <type>Lookup</type>
</CustomField>