force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__City__c.field-meta.xml
<CustomField>
    <fullName>OCE__City__c</fullName>
    <description>The City of the Address.</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>