force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__Comments__c.field-meta.xml
<CustomField>
    <fullName>OCE__Comments__c</fullName>
    <description>Comments on MIRF record.</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>