force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__DeliveredSignature__c.field-meta.xml
<CustomField>
    <fullName>OCE__DeliveredSignature__c</fullName>
    <description>Signature which was captured after delivery of off-label response.</description>
    <inlineHelpText>Signature which was captured after delivery of off-label response.</inlineHelpText>
    <label>Delivered Signature</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>