force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__DeliveredSignatureCaptureDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__DeliveredSignatureCaptureDate__c</fullName>
    <description>Date when signature was captured after delivery of off-label response.</description>
    <inlineHelpText>Date when signature was captured after delivery of off-label response.</inlineHelpText>
    <label>Delivered Signature Capture Date</label>
    <type>Date</type>
</CustomField>