force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__DeliveredSignatureCaptureDateTime__c.field-meta.xml
<CustomField>
    <fullName>OCE__DeliveredSignatureCaptureDateTime__c</fullName>
    <description>Date/time when signature was captured after delivery of off-label response.</description>
    <inlineHelpText>Date/time when signature was captured after delivery of off-label response.</inlineHelpText>
    <label>Delivered Signature Capture Date Time</label>
    <type>DateTime</type>
</CustomField>