force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>OCE__Disclaimer__c</fullName>
    <description>Stores a snapshot of the disclaimer that was presented to the user for the Medical Inquiry</description>
    <label>Disclaimer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>