force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__DurationOfResponse__c.field-meta.xml
<CustomField>
    <fullName>OCE__DurationOfResponse__c</fullName>
    <description>Computed field to report on &quot;Duration of Response&quot; (Response time - Submition time)</description>
    <formula>OCE__ResponseDateTime__c - OCE__SubmittedDateTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration of Response</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>