force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__Email__c.field-meta.xml
<CustomField>
    <fullName>OCE__Email__c</fullName>
    <description>E-mail address of the Account requesting the Medical Inquiry.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>