force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__Fax__c.field-meta.xml
<CustomField>
    <fullName>OCE__Fax__c</fullName>
    <description>Fax number on MIRF record.</description>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>