force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__GeolocationMissingReasonOnSignature__c.field-meta.xml
<CustomField>
    <fullName>OCE__GeolocationMissingReasonOnSignature__c</fullName>
    <description>Populated in case GPS was not collected</description>
    <label>GeolocationMissingReasonOnSignature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Device restricted</fullName>
            </value>
            <value>
                <fullName>User restricted</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>