force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__GeolocationOnSignature__c.field-meta.xml
<CustomField>
    <fullName>OCE__GeolocationOnSignature__c</fullName>
    <description>GPS location collected on Call signature</description>
    <label>GeolocationOnSignature</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>