force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__HCPResponse__c.field-meta.xml
<CustomField>
    <fullName>OCE__HCPResponse__c</fullName>
    <description>Check if HCP found response helpful.</description>
    <label>Did HCP find feedback helpful</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>