force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__InitialRecordTypeDevName__c.field-meta.xml
<CustomField>
    <fullName>OCE__InitialRecordTypeDevName__c</fullName>
    <description>Field holds value of initial RecordType developer name</description>
    <label>Initial RecordType DevName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>