force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__InquiryChannel__c.field-meta.xml
<CustomField>
    <fullName>OCE__InquiryChannel__c</fullName>
    <description>Channel of medical inquiry request.</description>
    <label>Inquiry Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Field Request</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>