force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__InquiryType__c.field-meta.xml
<CustomField>
    <fullName>OCE__InquiryType__c</fullName>
    <description>Type of medical inquiry request.</description>
    <label>Inquiry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Efficacy</fullName>
            </value>
            <value>
                <fullName>Safety</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>