force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__IsOffLabel__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsOffLabel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag if response if off-label.</description>
    <inlineHelpText>Flag if response if off-label.</inlineHelpText>
    <label>Off-label</label>
    <type>Checkbox</type>
</CustomField>