force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__IsResponseAdded__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsResponseAdded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag if response is added on mobile app.</description>
    <inlineHelpText>Flag if response is added on mobile app.</inlineHelpText>
    <label>Is Response Added</label>
    <type>Checkbox</type>
</CustomField>