force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__IsSignatureCopyRequested__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsSignatureCopyRequested__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be set true if signature copy requested</description>
    <label>Is Signature Copy Requested</label>
    <type>Checkbox</type>
</CustomField>