force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__OfflineCreatedById__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineCreatedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Offline Created By ID</description>
    <label>Offline Created By Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MedicalInquiryRequests1</relationshipName>
    <type>Lookup</type>
</CustomField>