force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__OfflineLastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineLastModifiedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Offline Last Modified By ID</description>
    <label>Offline Last Modified By Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MedicalInquiryRequests2</relationshipName>
    <type>Lookup</type>
</CustomField>