force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__OfflineLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineLastModifiedDate__c</fullName>
    <description>Offline Last Modified Date</description>
    <label>Offline Last Modified Date</label>
    <type>DateTime</type>
</CustomField>