force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__OfflineUniqueID__c.field-meta.xml
<CustomField>
    <fullName>OCE__OfflineUniqueID__c</fullName>
    <description>Offline Unique Id</description>
    <label>Offline Unique ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>