force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__Phone__c.field-meta.xml
<CustomField>
    <fullName>OCE__Phone__c</fullName>
    <description>Phone number on MIRF record.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>