force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__Priority__c.field-meta.xml
<CustomField>
    <fullName>OCE__Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if medical inquiry request has priority.</description>
    <label>Priority</label>
    <type>Checkbox</type>
</CustomField>