force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__Product__c.field-meta.xml
<CustomField>
    <fullName>OCE__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Product in question for the Medical Inquiry.</description>
    <label>DEPRECATED Product</label>
    <referenceTo>OCE__Product__c</referenceTo>
    <relationshipName>MedicalInquiryRequests</relationshipName>
    <type>Lookup</type>
</CustomField>