force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__Question__c.field-meta.xml
<CustomField>
    <fullName>OCE__Question__c</fullName>
    <description>Question of medical inquiry request.</description>
    <label>Question</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>