force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__Response__c.field-meta.xml
<CustomField>
    <fullName>OCE__Response__c</fullName>
    <description>Response for medical inquiry request.</description>
    <label>Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>