force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__ResponseChannel__c.field-meta.xml
<CustomField>
    <fullName>OCE__ResponseChannel__c</fullName>
    <description>Response channel of medical inquiry request.</description>
    <label>Response Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Hand Delivery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>