force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__ResponseDateTime__c.field-meta.xml
<CustomField>
    <fullName>OCE__ResponseDateTime__c</fullName>
    <description>Response date/time of medical inquiry request.</description>
    <label>Response DateTime</label>
    <type>DateTime</type>
</CustomField>