force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__ResponsePreference__c.field-meta.xml
<CustomField>
    <fullName>OCE__ResponsePreference__c</fullName>
    <description>Preferred response channel of medical inquiry request.</description>
    <inlineHelpText>Preferred response channel of medical inquiry request.</inlineHelpText>
    <label>Response Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Post Mail</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>