force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__Signature__c.field-meta.xml
<CustomField>
    <fullName>OCE__Signature__c</fullName>
    <description>The electronic signature of the requesting Account.</description>
    <label>Signature</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>