force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__SignatureDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__SignatureDate__c</fullName>
    <description>The Date and Time that the Account signed for the Medical Inquiry.</description>
    <label>Signature Date</label>
    <type>DateTime</type>
</CustomField>