force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__SignatureTimestamp__c.field-meta.xml
<CustomField>
    <fullName>OCE__SignatureTimestamp__c</fullName>
    <description>Signature timestamp.</description>
    <label>Signature Timestamp</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>