force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__SpecialHandlingInstruction__c.field-meta.xml
<CustomField>
    <fullName>OCE__SpecialHandlingInstruction__c</fullName>
    <description>Special handing instructions for MIRF record.</description>
    <inlineHelpText>Special handing instructions for MIRF record.</inlineHelpText>
    <label>Special Handling Instruction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>