force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__SubmittedDateTime__c.field-meta.xml
<CustomField>
    <fullName>OCE__SubmittedDateTime__c</fullName>
    <description>Date/time when MIRF record was submitted.</description>
    <label>Submitted Date Time</label>
    <type>DateTime</type>
</CustomField>