force-app/main/default/objects/OCE__MedicalInquiryRequest__c/fields/OCE__Territory__c.field-meta.xml
<CustomField>
    <fullName>OCE__Territory__c</fullName>
    <description>The name of the Territory.</description>
    <inlineHelpText>The name of the Territory.</inlineHelpText>
    <label>Territory</label>
    <length>80</length>
    <type>Text</type>
</CustomField>