force-app/main/default/objects/OCE__MedicalInquiryRequest__c/recordTypes/OCE__Assigned.recordType-meta.xml
<RecordType>
    <fullName>OCE__Assigned</fullName>
    <active>true</active>
    <label>Assigned</label>
</RecordType>