force-app/main/default/objects/OCE__MedicalInquiryRequest__c/recordTypes/OCE__Delivered.recordType-meta.xml
<RecordType>
    <fullName>OCE__Delivered</fullName>
    <active>true</active>
    <label>Delivered</label>
</RecordType>