force-app/main/default/objects/OCE__MedicalInquiryRequest__c/recordTypes/OCE__Responded.recordType-meta.xml
<RecordType>
    <fullName>OCE__Responded</fullName>
    <active>true</active>
    <label>Responded</label>
</RecordType>