force-app/main/default/objects/OCE__MedicalInquiryRequest__c/recordTypes/OCE__Submitted.recordType-meta.xml
<RecordType>
    <fullName>OCE__Submitted</fullName>
    <active>true</active>
    <label>Submitted</label>
</RecordType>