force-app/main/default/objects/OCE__MedicalInquiryRequest__c/recordTypes/Vigilance.recordType-meta.xml
<RecordType>
    <fullName>Vigilance</fullName>
    <active>true</active>
    <label>Vigilance</label>
</RecordType>