force-app/main/default/objects/OCE__MedicalInquiryRequest__c/listViews/MSLQueue_MedicalInquiryRequest.listView-meta.xml
<ListView>
    <fullName>MSLQueue_MedicalInquiryRequest</fullName>
    <filterScope>Queue</filterScope>
    <label>MSL Queue</label>
    <queue>MSLQueue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>