force-app/main/default/objects/OCE__MedicalInquiryRequest__c/listViews/OCE__All.listView-meta.xml
<ListView>
    <fullName>OCE__All</fullName>
    <columns>NAME</columns>
    <columns>OCE__Account__c</columns>
    <columns>OCE__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>