force-app/main/default/objects/OCE__MedicalInquiryRequest__c/listViews/OCE__Assigned_To_Me.listView-meta.xml
<ListView>
    <fullName>OCE__Assigned_To_Me</fullName>
    <columns>NAME</columns>
    <columns>OCE__Account__c</columns>
    <columns>OCE__Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OCE__Status__c</field>
        <operation>equals</operation>
        <value>Assigned</value>
    </filters>
    <label>Assigned to Me</label>
    <language>en_US</language>
</ListView>