force-app/main/default/objects/OCE__MedicalInquiryRequest__c/listViews/OCE__Unassigned.listView-meta.xml
<ListView>
    <fullName>OCE__Unassigned</fullName>
    <columns>NAME</columns>
    <columns>OCE__Account__c</columns>
    <columns>OCE__Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OCE__Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Unassigned</label>
    <language>en_US</language>
</ListView>